fix : discard & play