@@ -10,63 +10,46 @@ import logic.card.Card;
 import java.util.ArrayList;
 
 public class Play {
-
-    private ArrayList<Card> handcards;
+    private ArrayList<Card> cardlist;
     private Hand hand;
     private Deck deck;
 
     private ArrayList<Card> selectedCards;
 
-    public Play(Hand hand, Deck deck){
-        this.handcards = GameController.getInstance().getHand().getCardList();
+    public Play(){
+        this.cardlist = GameController.getInstance().getHand().getCardList();
         this.hand = GameController.getInstance().getHand();
         this.deck = GameController.getInstance().getDeck();
-
+        this.selectedCards = GameController.getInstance().getHand().getSelectedCards();
     }
 
     public void playRound(ArrayList<Card> selectedCards){
-        ArrayList<Card> cardsToRemove = new ArrayList<>();
+        //score calculate
 
-        if(handcards.contains(selectedCards)) {
-            if (selectedCards.size() >= 1 && selectedCards.size() <= 5) {
-                for (Card selectedCard : selectedCards) {
-                    cardsToRemove.add(selectedCard);
-                }
 
-                handcards.removeAll(cardsToRemove);
-                hand.fillHand(deck);
-                System.out.println("Your hand for next round: " + handcards);
-            }
-        }
+        //remove & refill
+        cardlist.removeAll(selectedCards);
+        hand.fillHand(deck);
+        System.out.println("Your hand for next round: ");
+        hand.viewHand();
     }
 
     public HandType HandTypeClassify(ArrayList<Card> selectedCards){
-        if (isRoyalFlush()) {
-            return HandType.RoyalFlush;
-        } else if (isStraightFlush()) {
-            return HandType.StraightFlush;
-        } else if (isFourOfAKind()) {
-            return HandType.FourOfAKind;
-        } else if (isFullHouse()) {
-            return HandType.FullHouse;
-        } else if (isFlush()) {
-            return HandType.Flush;
-        } else if (isStraight()) {
-            return HandType.Straight;
-        } else if (isThreeOfAKind()) {
-            return HandType.ThreeOfAKind;
-        } else if (isTwoPairs()) {
-            return HandType.TwoPair;
-        } else if (isPair()) {
-            return HandType.Pair;
-        } else {
-            return HandType.HighCard;
-        }
+        if (isRoyalFlush()) return HandType.RoyalFlush;
+        else if (isStraightFlush()) return HandType.StraightFlush;
+        else if (isFourOfAKind()) return HandType.FourOfAKind;
+        else if (isFullHouse()) return HandType.FullHouse;
+        else if (isFlush()) return HandType.Flush;
+        else if (isStraight()) return HandType.Straight;
+        else if (isThreeOfAKind()) return HandType.ThreeOfAKind;
+        else if (isTwoPairs()) return HandType.TwoPair;
+        else if (isPair()) return HandType.Pair;
+        else return HandType.HighCard;
     }
 
     // Method to check if the hand is a royal flush
     private boolean isRoyalFlush() {
-        return isStraightFlush() && handcards.get(4).getRank() == Rank.ACE;
+        return isStraightFlush() && cardlist.get(4).getRank() == Rank.ACE;
     }
 
     // Method to check if the hand is a straight flush
@@ -77,8 +60,8 @@ public class Play {
     // Method to check if the hand contains four of a kind
     private boolean isFourOfAKind() {
         for (int i = 0; i < hand.getHandSize() - 3; i++) {
-            if (handcards.get(i).getRank() == handcards.get(i + 1).getRank() && handcards.get(i).getRank() == handcards.get(i + 2).getRank()
-                    && handcards.get(i).getRank() == handcards.get(i + 3).getRank()) {
+            if (cardlist.get(i).getRank() == cardlist.get(i + 1).getRank() && cardlist.get(i).getRank() == cardlist.get(i + 2).getRank()
+                    && cardlist.get(i).getRank() == cardlist.get(i + 3).getRank()) {
                 return true;
             }
         }
@@ -91,14 +74,16 @@ public class Play {
         boolean pair = false;
 
         for (int i = 0; i < hand.getHandSize() - 2; i++) {
-            if (handcards.get(i).getRank() == handcards.get(i + 1).getRank() && handcards.get(i).getRank() == handcards.get(i + 2).getRank()) {
+            if (cardlist.get(i).getRank() == cardlist.get(i + 1).getRank() && cardlist.get(i).getRank() == cardlist.get(i + 2).getRank()) {
                 three = true;
+                break;
             }
         }
 
         for (int i = 0; i < hand.getHandSize() - 1; i++) {
-            if (handcards.get(i).getRank() == handcards.get(i + 1).getRank()) {
+            if (cardlist.get(i).getRank() == cardlist.get(i + 1).getRank()) {
                 pair = true;
+                break;
             }
         }
 
@@ -108,9 +93,9 @@ public class Play {
     // Method to check if the hand is a flush
     private boolean isFlush() {
         // Check if all cards have the same suit
-        Suit suit = handcards.get(0).getSuit();
+        Suit suit = cardlist.getFirst().getSuit();
         for (int i = 1; i < hand.getHandSize(); i++) {
-            if (handcards.get(i).getSuit() != suit) {
+            if (cardlist.get(i).getSuit() != suit) {
                 return false;
             }
         }
@@ -121,7 +106,7 @@ public class Play {
     private boolean isStraight() {
         // Check for the presence of consecutive ranks
         for (int i = 0; i < hand.getHandSize() - 1; i++) {
-            if (handcards.get(i).getRank().ordinal() != handcards.get(i + 1).getRank().ordinal() - 1) {
+            if (cardlist.get(i).getRank().ordinal() != cardlist.get(i + 1).getRank().ordinal() - 1) {
                 return false;
             }
         }
@@ -131,7 +116,7 @@ public class Play {
     // Method to check if the hand contains three of a kind
     private boolean isThreeOfAKind() {
         for (int i = 0; i < hand.getHandSize() - 2; i++) {
-            if (handcards.get(i).getRank() == handcards.get(i + 1).getRank() && handcards.get(i).getRank() == handcards.get(i + 2).getRank()) {
+            if (cardlist.get(i).getRank() == cardlist.get(i + 1).getRank() && cardlist.get(i).getRank() == cardlist.get(i + 2).getRank()) {
                 return true;
             }
         }
@@ -142,7 +127,7 @@ public class Play {
     private boolean isTwoPairs() {
         int pairsCount = 0;
         for (int i = 0; i < hand.getHandSize() - 1; i++) {
-            if (handcards.get(i).getRank() == handcards.get(i + 1).getRank()) {
+            if (cardlist.get(i).getRank() == cardlist.get(i + 1).getRank()) {
                 pairsCount++;
                 i++;
             }
@@ -153,7 +138,7 @@ public class Play {
     // Method to check if the hand contains a pair
     private boolean isPair() {
         for (int i = 0; i < hand.getHandSize() - 1; i++) {
-            if (handcards.get(i).getRank() == handcards.get(i + 1).getRank()) {
+            if (cardlist.get(i).getRank() == cardlist.get(i + 1).getRank()) {
                 return true;
             }
         }
